Comment on HW01.Rmd

--- a/HW_1/HW01 Penguin R Analysis.Rmd
+++ b/HW_1/HW01 Penguin R Analysis.Rmd
@@ -10,10 +10,10 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(palmerpenguins)
-library(ggplot2)
+library(ggplot2) # library(tidyverse) also loads ggplot2, so you don't need to include both
 library(tidyverse)
 library(scales)
-x <- penguins$body_mass_g
+x <- penguins$body_mass_g # <!-- for readability, it's best to use more descriptive variable names
 ```
 
 ## Summary
