--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -20,7 +20,7 @@ library(dplyr)
 
 
 ```{r}
-filter(gapminder, country %in% c("China", "Japan", "France") & year =="1970":"1979")
+filter(gapminder, country %in% c("China", "Japan", "France") & year ==1970:1979)
 ```
 
 ## 1.2
@@ -28,8 +28,24 @@ filter(gapminder, country %in% c("China", "Japan", "France") & year =="1970":"19
 
 ```{r}
 gapminder %>% 
-  filter(country %in% c("China", "France", "Japan") & year == "1970":"1979") %>% 
+  filter(country %in% c("China", "France", "Japan") & year == 1970:1979) %>% 
   select(country, gdpPercap)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## 1.3
+
+```{r}
+gapminder %>% 
+  mutate(dropLifeExp <- lag(lifeExp))
+```
+
+## 1.4
+
+```{r}
+gapminder %>% 
+  select(country, gdpPercap) %>%
+  mutate(gdpPercapMax = gdpPercap) %>% 
+  group_by(country) %>% 
+  filter(gdpPercapMax == max(gdpPercapMax))
+```
+  
