--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -9,11 +9,11 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## ackage Data Used.
 ```{r}
 library(gapminder)
 library(tidyverse)
 library(dplyr)
+library(ggplot2)
 ```
 
 ## 1.1
@@ -49,3 +49,13 @@ gapminder %>%
   filter(gdpPercapMax == max(gdpPercapMax))
 ```
   
+## 1.5
+
+```{r}
+gapminder %>% 
+  filter(country == "Canada") %>% 
+  ggplot() +
+  aes(x= lifeExp, y= gdpPercap) +
+  geom_point(fill = "red", color = "black", alpha = .5, size = 3)
+```
+
