Update Exploring gapminder and use dplyr.Rmd

--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -45,7 +45,7 @@ gapminder %>%
 
 ```{r}
 gapminder %>% 
-  select(country, gdpPxercap) %>%
+  select(country, gdpPercap) %>%
   group_by(country) %>%
   filter(gdpPercap == max(gdpPercap))
 ```
