Update Exploring gapminder and use dplyr.Rmd

--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -20,6 +20,8 @@ library(ggplot2)
 
 ## 1.1
 
+Use filter() to subset the gapminder data to three countries of your choice in the 1970’s.
+
 
 ```{r}
 filter(gapminder, country %in% c("China", "Japan", "France") & year ==1970:1979)
@@ -27,6 +29,7 @@ filter(gapminder, country %in% c("China", "Japan", "France") & year ==1970:1979)
 
 ## 1.2
 
+Use the pipe operator %>% to select “country” and “gdpPercap” from your filtered dataset in 1.1.
 
 ```{r}
 gapminder %>% 
@@ -73,6 +76,12 @@ palmerpenguins::penguins %>%
        sd = ~ sd(.x, na.rm = TRUE),
        min = ~ min(.x, na.rm = TRUE),
        max = ~ max(.x, na.rm = TRUE)))) 
+
+palmerpenguins::penguins %>% 
+  ggplot() +
+  aes(x = body_mass_g, y = flipper_length_mm) +
+  geom_jitter() +
+  geom_point(fill = "white", color = "red", alpha = .5,  size = 3)
 ```
 
 ## 2.2
@@ -98,4 +107,9 @@ palmerpenguins::penguins %>%
               size = 1.0) +
   aes(x = species, y = body_mass_g) +
   geom_point(fill = "black", color = "red", alpha = .5, size = 3)
+
+palmerpenguins::penguins %>% 
+  ggplot() +
+  aes(body_mass_g) + 
+  geom_histogram()
 ```
