--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -39,12 +39,18 @@ gapminder %>%
 
 ## 1.3
 
+Make a new variable in gapminder for the change in life expectancy from the previous measurement. Filter this table to show all of the entries that have experienced a drop in life expectancy.
+
+
 ```{r}
 gapminder %>% 
   mutate(dropLifeExp <- lag(lifeExp))
 ```
 
 ## 1.4
+
+Filter gapminder so that it shows the max GDP per capita experienced by each country.
+
 
 ```{r}
 gapminder %>% 
@@ -54,6 +60,9 @@ gapminder %>%
 ```
   
 ## 1.5
+
+Produce a scatterplot of Canada’s life expectancy vs. GDP per capita using ggplot2, without defining a new variable. That is, after filtering the gapminder data set, pipe it directly into the ggplot() function. In your plot, put GDP per capita on a log scale.
+
 
 ```{r}
 gapminder %>% 
@@ -67,6 +76,13 @@ gapminder %>%
 # Excercise 2
 
 ## 2.1
+
+Pick two quantitative variables to explore.
+
+Make a summary table of descriptive statistics for these variables using summarize().
+Include whatever staistics you feel appropriate (mean, median sd, range, etc.).
+Make a scatterplot of these variables using ggplot().
+
 
 ```{r}
 library(palmerpenguins)
@@ -85,6 +101,12 @@ palmerpenguins::penguins %>%
 ```
 
 ## 2.2
+
+Pick one categorical variable and one quantitative variable to explore.
+
+Make a summary table giving the sample size (hint: n()) and descriptive statistics for the quantitative variable by group.
+Make one or more useful plots to visualize these variables.
+
 
 ```{r}
 palmerpenguins::penguins %>% 
