Update Exploring gapminder and use dplyr.Rmd

--- a/HW2/Exploring gapminder and use dplyr.Rmd
+++ b/HW2/Exploring gapminder and use dplyr.Rmd
@@ -44,7 +44,8 @@ Make a new variable in gapminder for the change in life expectancy from the prev
 
 ```{r}
 gapminder %>% 
-  mutate(dropLifeExp <- lag(lifeExp))
+  mutate(dropLifeExp = lag(lifeExp)) %>% 
+  filter(dropLifeExp <= lifeExp)
 ```
 
 ## 1.4
