--- a/Participation/s06_pivot-exercise.Rmd
+++ b/Participation/s06_pivot-exercise.Rmd
@@ -30,20 +30,20 @@ lotr
 
    <!-- Describe why or why not in this space. -->
 
-2. Widen the data so that we see the words spoken by each species, by putting species as its own column.
+2. Widen the data so that we see the words spoken by each species, by putting each species as its own column.
 
 ```{r}
 (lotr_wide <- lotr %>% 
-  pivot_wider(FILL_THIS_IN = c(-Species, -Words), 
-              FILL_THIS_IN = Species, 
-              FILL_THIS_IN = Words))
+  pivot_wider(id_cols = c(-Species, -Words), 
+              names_from = Species, 
+              values_from = Words))
 ```
 
 3. Re-lengthen the wide LOTR data from Question 2 above.
 
 ```{r}
 lotr_wide %>% 
-  pivot_longer(FILL_THIS_IN = FILL_THIS_IN, 
-               names_to  = FILL_THIS_IN, 
-               values_to = FILL_THIS_IN)
+  pivot_longer(cols = c(Elf, Hobbit, Man), 
+               names_to  = "Species", 
+               values_to = "n")
 ```
