--- a/HW3/hw03.Rmd
+++ b/HW3/hw03.Rmd
@@ -8,6 +8,7 @@ dictionary <- readr::read_csv("green_dictionary.csv")
 green_data <- readr::read_csv("green_data.csv")
 library(tidyverse)
 library(psychTools)
+library(scales)
 ```
 
 For your assignment, do the following.
@@ -94,8 +95,7 @@ green_data %>%
                          "3" = 3,
                          "2" = 4,
                          "1" = 5),
-                .names = "{.col}r")) %>% 
-  mutate()
+                .names = "{.col}r"))
 ```
 
 ```{r}
@@ -108,6 +108,8 @@ open_ex <- c("open7", "open8", "open9", "open10")
 ```{r}
 green_data %>% 
   mutate(student = recode(student, "1" = "Not_Student", "2" = "Student", .missing = "No_Response", .default = "Unknown")) %>% 
+  mutate(across(everything(),
+                ~na_if(.x, -99))) %>% 
   rowwise() %>%
   mutate(green_tot = mean(c_across(green1:green5 & !green2), na.rm = TRUE)) %>%
   mutate(comp_tot = mean(c_across(comp1:comp10 & !comp_ex), na.rm = TRUE)) %>% 
@@ -119,6 +121,8 @@ green_data %>%
 ```{r}
 items_data <- green_data %>% 
   mutate(student = recode(student, "1" = "Not_Student", "2" = "Student", .missing = "No_Response", .default = "Unknown")) %>% 
+  mutate(across(everything(),
+                ~na_if(.x, -99))) %>% 
   rowwise() %>%
   mutate(green_tot = mean(c_across(green1:green5 & !green2), na.rm = TRUE)) %>%
   mutate(comp_tot = mean(c_across(comp1:comp10 & !comp_ex), na.rm = TRUE)) %>% 
@@ -145,8 +149,21 @@ items_data %>%
             open_mean = mean(open_tot, na.rm = TRUE))
 ```
 ### 3. Rescale the variables so that they go from 0-100 instead of the original range.
-     Name the recaled variables `*_pomp`.
+     Name the rescaled variables `*_pomp`.
+     
+```{r}
+items_data %>%
+  rowwise() %>% 
+  mutate(green_pomp = (100*(green_tot - 1))/4, na.rm = TRUE,
+         comp_pomp = (100*(comp_tot - 1))/4, na.rm = TRUE,
+         intel_pomp = (100*(intel_tot - 1))/4, na.rm = TRUE,
+         open_pomp = (100*(open_tot - 1))/4, na.rm = TRUE) %>% 
+  select(id, green_pomp, comp_pomp, intel_pomp, open_pomp)
+```
+
 ### 4. Make plots that illustrate the distributions of the 4 POMP-scored variables.
+
+
 ### 5. Make scatterplots showing the relationships between **green reputation** and each personality trait.
      Include trend lines for **students** and **non-students**.
      What do these plots show?
