--- a/HW3/hw03.Rmd
+++ b/HW3/hw03.Rmd
@@ -127,7 +127,7 @@ new_green_data <- green_data %>%
 ```
 
 
-  > Since I have the necessary information for the calculation, I decided to make a list of the newly reversed columns into a new variable along with a list of the excluding variables for some of the columns for easier and faster coding process.
+  > Since I have the necessary information for the calculation, I decided to make a list of the newly reversed columns into a new variable along with a list of the excluding variables for some of the columns for easier and faster coding process (if such lists are needed).
   
 ```{r} 
 reversed_columns <- c("green2r", "comp6r", "comp7r", "comp8r", "comp9r", "comp10r", "intel7r", "intel8r", "intel9r", "intel10r", "open7r", "open8r", "open9r", "open10r")
@@ -140,35 +140,34 @@ open_ex <- c("open7", "open8", "open9", "open10")
   
 ```{r}
 new_green_data %>% 
-  rowwise() %>%
-  mutate(green_tot = mean(c_across(green1:green5 & !green2), na.rm = TRUE)) %>%
-  mutate(comp_tot = mean(c_across(comp1:comp10 & !comp_ex), na.rm = TRUE)) %>% 
-  mutate(intel_tot = mean(c_across(intel1:intel10 & !intel_ex), na.rm = TRUE)) %>% 
-  mutate(open_tot = mean(c_across(open1:open10 & !open_ex),  na.rm = TRUE)) %>% 
+  rowwise() %>% 
+  mutate(green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
+         comp_tot = mean(c(comp1, comp2, comp3, comp4, comp5, comp6r, comp7r, comp8r, comp9r, comp10r), 
+                         na.rm = TRUE),
+         intel_tot = mean(c(intel1, intel2, intel3, intel4, intel5, intel6, intel7r, intel8r, intel9r, intel10r),
+                          na.rm = TRUE),
+         open_tot = mean(c(open1, open2, open3, open4, open5, open6, open7r, open8r, open9r, open10r), 
+                         na.rm = TRUE)) %>% 
   na.omit() %>% 
   select(id, green_tot, comp_tot, intel_tot, open_tot, student)
 ```
 
-  > 
+  > I ended up wanting to save this calculation into a new variable for later usage.
 
 ```{r}
 items_data <- new_green_data %>% 
-  rowwise() %>%
-  mutate(green_tot = mean(c_across(green1:green5 & !green2), na.rm = TRUE)) %>%
-  mutate(comp_tot = mean(c_across(comp1:comp10 & !comp_ex), na.rm = TRUE)) %>% 
-  mutate(intel_tot = mean(c_across(intel1:intel10 & !intel_ex), na.rm = TRUE)) %>% 
-  mutate(open_tot = mean(c_across(open1:open10 & !open_ex),  na.rm = TRUE)) %>% 
+  rowwise() %>% 
+  mutate(green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
+         comp_tot = mean(c(comp1, comp2, comp3, comp4, comp5, comp6r, comp7r, comp8r, comp9r, comp10r), 
+                         na.rm = TRUE),
+         intel_tot = mean(c(intel1, intel2, intel3, intel4, intel5, intel6, intel7r, intel8r, intel9r, intel10r),
+                          na.rm = TRUE),
+         open_tot = mean(c(open1, open2, open3, open4, open5, open6, open7r, open8r, open9r, open10r), 
+                         na.rm = TRUE)) %>% 
   na.omit()
 ```
 
-```{r}
-items_data %>% 
-  group_by(student) %>% 
-  summarize(green_mean = mean(green_tot, na.rm = TRUE),
-            comp_mean = mean(comp_tot, na.rm = TRUE),
-            intel_mean = mean(intel_tot, na.rm = TRUE),
-            open_mean = mean(open_tot, na.rm = TRUE))
-```
+  > Summary by students or non students.
 
 ```{r}
 items_data %>% 
@@ -181,15 +180,29 @@ items_data %>%
 
 ### 3. Rescale the variables so that they go from 0-100 instead of the original range.
      Name the rescaled variables `*_pomp`.
-     
+
+  > I want to make sure that it is the variables that are being rescaled and later caculation can follow so I did this: 
+  
 ```{r}
-items_data %>%
-  rowwise() %>% 
-  mutate(green_pomp = (100*(green_tot - 1))/4, na.rm = TRUE,
-         comp_pomp = (100*(comp_tot - 1))/4, na.rm = TRUE,
-         intel_pomp = (100*(intel_tot - 1))/4, na.rm = TRUE,
-         open_pomp = (100*(open_tot - 1))/4, na.rm = TRUE) %>% 
-  select(id, green_pomp, comp_pomp, intel_pomp, open_pomp)
+new_green_data %>% 
+  mutate(green_pomp = rescale(c_across(green1:green5, 
+                         to=c(0,100), 
+                         from=c(1,5)),
+    comp_pomp = rescale(comp_tot, 
+                        to=c(0,100), 
+                        from=c(1,5)),
+    intel_pomp = rescale(intel_tot, 
+                         to=c(0,100), 
+                         from=c(1,5)),
+    open_pomp = rescale(open_tot, 
+                        to=c(0,100), 
+                        from=c(1,5))) %>%
+  select(id, 
+         student, 
+         green_pomp, 
+         comp_pomp, 
+         intel_pomp, 
+         open_pomp)
 ```
 
 ### 4. Make plots that illustrate the distributions of the 4 POMP-scored variables.
