--- a/HW3/hw03.Rmd
+++ b/HW3/hw03.Rmd
@@ -9,6 +9,12 @@ green_data <- readr::read_csv("green_data.csv")
 library(tidyverse)
 library(psychTools)
 library(scales)
+library(dplyr)
+library(tidyr)
+library(tibble)
+library(scales)
+library(ggplot2)
+library(gridExtra)
 ```
 
 For your assignment, do the following.
@@ -242,12 +248,75 @@ pomp_tot_data %>%
   > Now I start the ggplot process.
 
 ```{r}
+green_tot_histo <- pomp_tot_data %>% 
+ggplot() +
+aes(x = green_tot_pomp) +
+  geom_histogram(fill = "red") +
+  theme_classic()
+```
 
+```{r}
+comp_tot_histo  <- pomp_tot_data %>% 
+ggplot() +
+aes(x = comp_tot_pomp) +
+  geom_histogram(fill = "green") +
+  theme_classic()
+```
+
+```{r}
+intel_tot_histo <- pomp_tot_data %>% 
+ggplot() +
+aes(x = intel_tot_pomp) +
+  geom_histogram(fill = "blue") +
+  theme_classic()
+```
+
+```{r}
+open_tot_histo <- pomp_tot_data %>% 
+ggplot() +
+aes(x = open_tot_pomp) +
+  geom_histogram(fill = "orange") +
+  theme_classic()
+```
+
+  > I decided to group the graphs together for easier comparison.
+  
+```{r}
+grid.arrange(green_tot_histo, 
+             comp_tot_histo, 
+             intel_tot_histo, 
+             open_tot_histo)
 ```
 
 ### 5. Make scatterplots showing the relationships between **green reputation** and each personality trait.
      Include trend lines for **students** and **non-students**.
      What do these plots show?
+     
+ > I started this with building the scatterplot from the perviously used variable to compute the mean of the total pomp columns.
+ 
+```{r}
+pomp_tot_data %>% 
+  ggplot() +
+  aes(x = green_tot_pomp, y = comp_tot_pomp, color = student) +
+  geom_jitter(alpha = .5, size = 3)
+```
+
+```{r}
+pomp_tot_data %>% 
+  ggplot() +
+  aes(x = green_tot_pomp, y = intel_tot_pomp, color = student) +
+  geom_jitter(alpha = .5, size = 3)
+```
+
+```{r}
+pomp_tot_data %>% 
+  ggplot() +
+  aes(x = green_tot_pomp, y = open_tot_pomp, color = student) +
+  geom_jitter(alpha = .5, size = 3)
+```
+
+
+
 ### 6. Compare **green reputation** for students and non-students using a **rainfall plot** (bar + density + data points).
 ### 7. Compute a summary table of means, SDs, medians, minima, and maxima for the four total scores for students and non-students.
   
